runs/runs/github.com/zatulik/python/logs/test-notebook-yvzatuliДЗ2.ipynb-2020-07-17T12.43.txt
[I 200717 12:43:58 inrepo:36] Testing notebook yvzatuliДЗ2.ipynb
[W 200717 12:43:58 inrepo:48] No such kernel python2, falling back on kernel language=python
[W 200717 12:43:58 inrepo:60] Using kernel python3 to provide language: python
[I 200717 12:43:59 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 114, in <module>
    main()
  File "/src/inrepo.py", line 110, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 75, in run_notebook
    nb, cwd=os.path.dirname(nb_path), kernel_name=kernel_name, timeout=600
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
print my_base['+7 916 000 00 01']['phone']
------------------

[0;36m  File [0;32m"<ipython-input-8-469ad18f95bf>"[0;36m, line [0;32m1[0m
[0;31m    print my_base['+7 916 000 00 01']['phone'][0m
[0m                ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'. Did you mean print(my_base['+7 916 000 00 01']['phone'])?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print(my_base['+7 916 000 00 01']['phone'])? (<ipython-input-8-469ad18f95bf>, line 1)


Container exited with status: {'Error': None, 'StatusCode': 1}
